layout bug fixed

--- a/browser/components/Dashboard/Viewport/Viewport.scss
+++ b/browser/components/Dashboard/Viewport/Viewport.scss
@@ -1,6 +1,6 @@
 .viewport {
   padding-top: 50px;
-  margin-left: 250px;
+  padding-left: 250px;
   width: 100%;
   box-sizing: border-box;
   display: block;
